# jarvis

./: .cov_coreF  .env.example  .gitattributes  .gitignore  .jarvis_root  CONTRIBUTING.md  FEATURES.md  README.md  ROADMAP.md  SETUP.md  _fire_upgrade.ps1  _instance_hygiene.sh  _show_log.ps1  _viewer_sweep.sh  blue_green_manager.py  bobert_companion.py  boot_sequence.py  command_autocorrect.py  hud_card.py  iron_man_boot.py  jarvis_failure_lines.py  jarvis_watcher.py  mcp_servers.example.json  mcu_phrases.py  memory.py  overnight_upgrade.py  requirements.txt  setup_desktop_shortcut.py  staging_instance.py  test_bambu_persistence.py  test_watchdog.py  tray.py  upgrade_jarvis.py
adapters/: voice_mood_response.py
audio/: __init__.py  apple_music_app.py  apple_music_keeper.py  audio_switch.py  face_id.py  hwinfo.py  itunes_bridge.py  kinect_bridge.py  kinect_gestures.py  kinect_pointing.py  kinect_skeleton.py  tv_detect.py
core/: __init__.py  actions.py  air_control.py  atomic_io.py  audio_processor.py  bambu_camera.py  bug_reporter.py  bus_transport.py  config.py  diagnostic_daemons.py  dispatcher.py  draft_confirm.py  draft_preview_gate.py  emotion_tracker.py  failure_markers.py  gpu_state.py  gpu_usage.py  kokoro_tts.py  lead_fillers.py  legacy_memory.py  llm_client.py  long_term_memory.py  mcp_client.py  media_now_playing.py  memory.py  memory_guards.py  message_bus.py  mode_router.py  model_catalog.py  no_window_subprocess.py  (+27 more)
native/jarvis-audio/: Cargo.toml  README.md
native/jarvis-audio/src/: capture.rs  lib.rs  main.rs  protocol.rs  ring_buffer.rs  vad.rs
(+383 files in other folders)
