[package]
name = "jarvis-audio"
version = "0.2.0"
edition = "2021"
description = "JARVIS native always-on audio capture/wake/VAD service (roadmap M1)"
license = "MIT"

[lib]
name = "jarvis_audio"
path = "src/lib.rs"

[[bin]]
name = "jarvis-audio"
path = "src/main.rs"

[dependencies]
# Cross-platform audio capture (WASAPI on Windows / CoreAudio / ALSA). Moves the
# soft-real-time capture path off the Python GIL. openWakeWord/Silero VAD + the
# named-pipe transport land in the next increments.
cpal = "0.15"
